--- a/index.html
+++ b/index.html
@@ -76,14 +76,6 @@
 	&lt;div class="grow-1 shrink-0"&gt;&lt;/div&gt;
 &lt;/div&gt;</code></pre>
 
-				<h4>Visibility</h4>
-
-<pre><code class="html">&lt;div class="visuallyHidden"&gt;&lt;/div&gt;</code></pre>
-
-				<h4>Rectangle width and height</h4>
-
-<pre><code class="html">&lt;svg class="rect-40-50 md:rect-48 xl:rect-56"&gt;&lt;/svg&gt;</code></pre>
-
 				<h4>Grid</h4>
 
 <pre><code class="html">&lt;div class="row  gap-sm lg:gap-md"&gt;
@@ -94,6 +86,15 @@
 
 	&lt;/div&gt;
 &lt;/div&gt;</code></pre>
+
+				<h4>Visibility</h4>
+
+<pre><code class="html">&lt;div class="visuallyHidden"&gt;&lt;/div&gt;</code></pre>
+
+				<h4>Rectangle width and height</h4>
+
+<pre><code class="html">&lt;svg class="rect-40-50 md:rect-48 xl:rect-56"&gt;
+&lt;/svg&gt;</code></pre>
 
 				<h4>Font size, weight and color</h4>
 
@@ -137,10 +138,7 @@
 					<li>Global context modifier with <code>G-</code> prefix. (<code>G-logged</code>, <code>G-admin</code>). If necessary you can add global context classes to the <code>&lt;body&gt;</code> tag</li>
 				</ul>
 
-				<p>
-					Don't worry, it's okay that prefixed modifiers looks like a utilities.
-					The main thing is that they have meaningful names, <code>do-blockExpand</code> for example.
-				</p>
+				<p>It's okay that prefixed modifiers looks like utilities. The main thing is that they have meaningful names, <code>do-blockExpand</code> for example.</p>
 
 				<h3 id="component-avoid" class="color-danger">Avoid</h3>
 
