--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 &lt;/article&gt;</code></pre>
 
 				<ul>
-					<li><code>SomeBlock</code> — block name in PascalCase</li>
-					<li><code>SomeBlock__innerBlock</code> — element in camelCase</li>
-					<li><code>-modifier</code> — modifier in camelCase</li>
+					<li><code>SomeBlock</code> — a block name in pascal case</li>
+					<li><code>-modifier</code> — a chainable modifier in camel case with a hyphen prefix</li>
+					<li><code>SomeBlock__innerBlock</code> — an element in camel case prefixed with the block name and double underscore</li>
 				</ul>
 
 				<h3 id="component-modifiers">Prefixed modifiers</h3>
