some text edits

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 &lt;/article&gt;</code></pre>
 
 				<ul>
-					<li><code>SomeBlock</code> — a block name in pascal case</li>
-					<li><code>-modifier</code> — a chainable modifier in camel case with a hyphen prefix</li>
-					<li><code>SomeBlock__innerBlock</code> — an element in camel case prefixed with the block name and double underscore</li>
+					<li><code>SomeBlock</code> — a block name written using pascal case</li>
+					<li><code>-modifier</code> — a chainable modifier written using camel case with a hyphen prefix</li>
+					<li><code>SomeBlock__innerBlock</code> — an element written using camel case prefixed with the block name and double underscore</li>
 				</ul>
 
 				<h3 id="component-modifiers">Prefixed modifiers</h3>
@@ -95,7 +95,7 @@
 				<ul>
 					<li>Media part is optional and used for responsive styles</li>
 					<li>Value part is optional and used for utility varied values</li>
-					<li>All the parts of a utility are in camel case</li>
+					<li>All the parts of a utility are written using camel case</li>
 				</ul>
 
 				<h3 id="utility-examples">Utility examples</h3>
