some text edits

--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
 
 				<ul>
 					<li><code>SomeBlock</code> — a block name written using pascal case</li>
-					<li><code>-modifier</code> — a chainable modifier written using camel case with a hyphen prefix</li>
+					<li><code>-modifier</code> — a <em>chainable</em> modifier written using camel case with a hyphen prefix</li>
 					<li><code>SomeBlock__innerBlock</code> — an element written using camel case prefixed with the block name and double underscore</li>
 				</ul>
 
 				<h3 id="component-modifiers">Prefixed modifiers</h3>
 
 				<ul>
-					<li><code>is-</code> — component state modifier (<code>is-selected</code>)</li>
+					<li><code>is-</code> — a component state modifier (<code>is-selected</code>)</li>
 					<li><code>has-</code> — state or presence of a descendant (<code>has-error</code>)</li>
 					<li>
 					</li>
-					<li><code>do-</code> — the hook for using in scripts</li>
+					<li><code>do-</code> — a hook for using in scripts</li>
 					<li>Global context modifier with <code>G-</code> prefix. (<code>G-logged</code>, <code>G-admin</code>). If necessary you can add global context classes to the <code>&lt;body&gt;</code> tag</li>
 				</ul>
 
