--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>UBEM</title>
+	<title>UBEM &ndash; the CSS naming system</title>
 	<link href="//fonts.googleapis.com/css2?family=Rubik:wght@400;700;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./styles/min/common.css">
 </head>
