--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>
 			<div class="Sidepanel__bottom">
 
-				<a href="mailto:dev@webowski.ru">dev@webowski.ru</a>
+				<a href="mailto:osokinweb@gmail.com">osokinweb@gmail.com</a>
 
 			</div>
 		</header>
